[package]
name = "actix-todo"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = "1.20.1"
actix-web = "4.1.0"
derive_more = "0.99.17"
env_logger = "0.9.0"
log = "0.4.17"
serde = {version = "1.0.143", features=["derive"]}
serde_json = "1.0.83"
mongodb = "2.3.0"
futures = "0.3.21"
clap = { version = "3.2.16", features = ["derive"]}
rand = "0.8.5"